# neuralothello

./: .gitignore  CMakeLists.txt  README.md  Untitled-1.nb  Untitled-1.wl  vsedax.wl
dump/: losshistory-run2.mx  losshistory.mx
run0/nets/: net-0009.wlnet  net-0010.wlnet  net-0011.wlnet  net-0012.wlnet  net-0013.wlnet  net-0014.wlnet  net-0015.wlnet  net-0016.wlnet  net-0017.wlnet  net-0018.wlnet  net-0019.wlnet  net-0020.wlnet  net-0021.wlnet  net-0022.wlnet  net-0023.wlnet  net-0024.wlnet  net-0025.wlnet  net-0026.wlnet  net-0027.wlnet  net-0028.wlnet  net-0029.wlnet  net-0030.wlnet  net-0031.wlnet  net-0032.wlnet  net-0033.wlnet  net-0034.wlnet  net-0035.wlnet  net-0036.wlnet  net-0037.wlnet  net-0038.wlnet  net-0039.wlnet  net-0040.wlnet  net-0041.wlnet  net-0042.wlnet  net-0043.wlnet  net-0044.wlnet  net-0045.wlnet  net-0046.wlnet  net-0047.wlnet  net-0048.wlnet  (+28 more)
run1/: parameters.txt  testresults.txt
run1/nets/: net-0004.wlnet  net-0007.wlnet  net-0008.wlnet  net-0009.wlnet  net-0010.wlnet  net-0011.wlnet  net-0012.wlnet  net-0013.wlnet  net-0014.wlnet  net-0015.wlnet  net-0016.wlnet  net-0017.wlnet  net-0018.wlnet  net-0019.wlnet  net-0020.wlnet  net-0021.wlnet  net-0022.wlnet  net-0023.wlnet  net-0024.wlnet  net-0025.wlnet  net-0026.wlnet  net-0027.wlnet  net-0028.wlnet  net-0029.wlnet  net-0030.wlnet  net-0031.wlnet  (+45 more)
run2/: parameters.txt  testresults.txt
run3/: parameters.txt  testresults.txt
run4/: parameters.txt  testresults.txt
run5/: parameters.txt  testresults.txt
src/: board.h  dir_mask.h  main.cpp  nn.h  options.h  search.h  timer.h
(+38882 files in other folders)
